After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779389 - sbcparse parses allocation mode incorrectly
sbcparse parses allocation mode incorrectly
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal minor
: 1.11.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-03-01 01:40 UTC by Michael Smith
Modified: 2017-03-02 16:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix sbcparse enum (831 bytes, patch)
2017-03-02 00:16 UTC, Michael Smith
none Details | Review

Description Michael Smith 2017-03-01 01:40:02 UTC
sbcparse parses the correct bit from SBC headers for the allocation mode (snr or loudness), but maps the bit to the values backwards - an snr file is interpreted as loudness and vice-versa.

This is because the bit is directly read into an enum, but the enum values aren't set appropriately for this.
Comment 1 Tim-Philipp Müller 2017-03-01 06:45:46 UTC
Are you going to make a patch for this Mike? :)
Comment 2 Michael Smith 2017-03-01 18:27:41 UTC
Are... are you trying to guilt me into that? I suppose I can try.
Comment 3 Michael Smith 2017-03-02 00:16:43 UTC
Created attachment 347011 [details] [review]
fix sbcparse enum
Comment 4 Michael Smith 2017-03-02 00:17:07 UTC
(I don't know where my ssh key is, I've probably lost it. So I'm not going to commit this directly)
Comment 5 Olivier Crête 2017-03-02 16:32:30 UTC
Merged:

commit f7b1eae3a2ea6268e5849df110a08560274883f7
Author: Michael Smith <mlrsmith@gmail.com>
Date:   Wed Mar 1 16:11:47 2017 -0800

    sbcparse: Fix up values for allocation enumeration.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=779389