sbcparse: Fix up values for allocation enumeration.

https://bugzilla.gnome.org/show_bug.cgi?id=779389